# tensorrt-learning

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py
Release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FindBZip2.cmake  FindBrotli.cmake  FindEigen3.cmake  FindFreetype.cmake  FindIconv.cmake  FindJPEG.cmake  FindJasper.cmake  FindLibLZMA.cmake  FindOgg.cmake  FindOpenCV.cmake  FindOpenEXR.cmake  FindOpenJPEG.cmake  FindOpenSSL.cmake  FindOpus.cmake  FindPNG.cmake  FindProtobuf.cmake  FindTIFF.cmake  FindVorbis.cmake  FindWebP.cmake  FindZLIB.cmake  Findade.cmake  Findfdk-aac.cmake  Findffmpeg.cmake  Findjbig.cmake  Findlibdeflate.cmake  Findlibmp3lame.cmake  Findlibvpx.cmake  Findlibx264.cmake  Findlibx265.cmake  Findopenh264.cmake  Findquirc.cmake  Findzstd.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  activate_run.bat  activate_run.ps1  activate_run.sh  (+10 more)
Release/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Release/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
apps/: CMakeLists.txt
apps/simple_model/: config.json  test_demo.cpp
apps/test_yolo/: test_yolo.cpp
include/detector/: simple_detector.hpp  yolo_detector.hpp
infra/: ConanProfileLinux.txt  ConanProfileWin.txt  HelperFuncs.cmake
scripts/: build.sh
scripts/onnx/: make_pb.sh
scripts/onnx_parser/: use_tensorrt_7.x.sh  use_tensorrt_8.x.sh
src/: CMakeLists.txt
src/detector/: CMakeLists.txt
src/detector/simple_detector/: simple_model.cpp  simple_model.py
src/detector/yolo_detector/: multi_gpu.cpp  multi_gpu.hpp  yolo.cpp  yolo.hpp  yolo_decode.cu  yolo_detector.cpp
src/direct/: direct_yolo.cpp
src/tensorRT/: CMakeLists.txt  Readme.md
src/tensorRT/builder/: trt_builder.cpp  trt_builder.hpp
src/tensorRT/common/: cuda_tools.cpp  ilogger.cpp  ilogger.hpp  infer_controller.hpp  trt_tensor.hpp
src/tensorRT/infer/: trt_infer.cpp
src/tensorRT/onnx/: onnx-ml.pb.cpp  onnx-ml.pb.h  onnx-operators-ml.pb.cpp  onnx-operators-ml.pb.h
src/tensorRT/onnxplugin/: onnxplugin.hpp  plugin_binary_io.cpp
src/tensorRT/onnxplugin/plugins/: HSigmoid.cu  HSwish.cu
src/tutorial/: CMakeLists.txt  README.zh-cn.md
src/tutorial/simple_model/: simple_model.py
